# example_jenkins_continuous_delivery

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md
doc/src/: index.md
doc/stage/: index.html
src/: main.cpp
